Fixed dark mode bug

--- a/styles.css
+++ b/styles.css
@@ -339,6 +339,10 @@ a > i {
     color: white;
   } 
 
+  .category {
+    color: #86868b !important;
+  }
+
   .section {
     /* background-image: linear-gradient(0deg, rgba(26,26,26,1) 0%, rgba(45,45,45,1) 100%); */
   }
